--- a/Group_Project.ipynb
+++ b/Group_Project.ipynb
@@ -14,7 +14,9 @@
    "id": "21939953-7a45-4152-a29d-ee7f700e518d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sanchia here!"
+   ]
   }
  ],
  "metadata": {
