stephanie's test edit

--- a/Group_Project.ipynb
+++ b/Group_Project.ipynb
@@ -10,13 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "21939953-7a45-4152-a29d-ee7f700e518d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sanchia here!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a1266e61-6b2e-464d-9344-42837202abac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stephanie is here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22225d0f-e04c-4164-9be2-9b52f05a4ed3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
