--- a/Oliver Linear Regression File.ipynb
+++ b/Oliver Linear Regression File.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "8e30b46e-f6de-41ac-818b-477265708b94",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "359bd095-b834-49ed-95ff-46537c996337",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "[125 rows x 14 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "f6b86268-a3d9-433d-b133-6b10207f15b9",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "736e30c8-317b-4fdc-ab44-606d3659bc0c",
    "metadata": {},
    "outputs": [
@@ -448,24 +448,25 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-26ccbc2159234801883947284c9ba679.vega-embed {\n",
+       "  #altair-viz-cb4f0adb1483400482947fd83e8992a3.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-26ccbc2159234801883947284c9ba679.vega-embed details,\n",
-       "  #altair-viz-26ccbc2159234801883947284c9ba679.vega-embed details summary {\n",
+       "  #altair-viz-cb4f0adb1483400482947fd83e8992a3.vega-embed details,\n",
+       "  #altair-viz-cb4f0adb1483400482947fd83e8992a3.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-26ccbc2159234801883947284c9ba679\"></div>\n",
+       "<div id=\"altair-viz-cb4f0adb1483400482947fd83e8992a3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-26ccbc2159234801883947284c9ba679\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-26ccbc2159234801883947284c9ba679\");\n",
+       "    if (outputDiv.id !== \"altair-viz-cb4f0adb1483400482947fd83e8992a3\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-cb4f0adb1483400482947fd83e8992a3\");\n",
        "    }\n",
+       "\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
@@ -502,7 +503,8 @@
        "\n",
        "    if(typeof define === \"function\" && define.amd) {\n",
        "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "      let deps = [\"vega-embed\"];\n",
+       "      require(deps, displayChart, err => showError(`Error loading script: ${err.message}`));\n",
        "    } else {\n",
        "      maybeLoadScript(\"vega\", \"5\")\n",
        "        .then(() => maybeLoadScript(\"vega-lite\", \"5.20.1\"))\n",
@@ -555,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "38cf7581-69e0-45e6-bb17-28c560ed1c4f",
    "metadata": {},
    "outputs": [
@@ -563,11 +565,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 43.453683282655696\n",
-      "Root Mean Squared Error (RMSE): 6.5919407827024425\n",
-      "R-squared: 0.530411297317595\n",
-      "Adjusted R-squared: 0.4734914545682125\n",
-      "Intercept: -5.221174835980342\n",
+      "Mean Squared Error: 43.453683282655746\n",
+      "Root Mean Squared Error (RMSE): 6.591940782702447\n",
+      "R-squared: 0.5304112973175944\n",
+      "Adjusted R-squared: 0.47349145456821196\n",
+      "Intercept: -5.221174835980367\n",
       "Coefficients: [ 4.03748816  2.17606734 -0.10342626  0.64320256]\n",
       "            Feature  Coefficient\n",
       "0  subscribe_binary     4.037488\n",
@@ -622,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "c0731de8-8bb4-4b89-9c8c-354e114f5d3d",
    "metadata": {},
    "outputs": [
@@ -635,8 +637,8 @@
       "Dep. Variable:           played_hours   R-squared:                       0.586\n",
       "Model:                            OLS   Adj. R-squared:                  0.572\n",
       "Method:                 Least Squares   F-statistic:                     42.50\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):           3.68e-22\n",
-      "Time:                        23:25:36   Log-Likelihood:                -566.59\n",
+      "Date:                Tue, 26 Nov 2024   Prob (F-statistic):           3.68e-22\n",
+      "Time:                        16:33:46   Log-Likelihood:                -566.59\n",
       "No. Observations:                 125   AIC:                             1143.\n",
       "Df Residuals:                     120   BIC:                             1157.\n",
       "Df Model:                           4                                         \n",
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "a39aec6f-e59f-4c26-b398-9e8294561910",
    "metadata": {},
    "outputs": [
@@ -723,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "d70da3a5-4151-46f0-a40d-2451714c69b8",
    "metadata": {},
    "outputs": [
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "e2c517a0-1ee9-4eaf-8c05-52de1de40e4a",
    "metadata": {},
    "outputs": [
@@ -785,7 +787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -799,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
