adding plots from the combined dataframe
-  plot for number of sessions x played hours
- a Bar chart for x=Subscribe and y=Number of played hours?

--- a/Compile_trial_sanchia.ipynb
+++ b/Compile_trial_sanchia.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "e4af63ce-f42b-4785-861a-c4a6b9f9513a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Predicting time of play based on plaicraft players' age: a DSCI 100 project "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2d4a8620-36f6-4e4f-954b-befe0d19b76b",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "3398edc8-9bb8-47fd-adb1-ff38e9b09f51",
    "metadata": {},
    "outputs": [],
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "45c2412a-6c85-4d6e-a095-f9ccd2544201",
    "metadata": {},
    "outputs": [
@@ -64,23 +74,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc.vega-embed {\n",
+       "  #altair-viz-4901a5de755942db99fe6fcbf8aff53a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc.vega-embed details,\n",
-       "  #altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc.vega-embed details summary {\n",
+       "  #altair-viz-4901a5de755942db99fe6fcbf8aff53a.vega-embed details,\n",
+       "  #altair-viz-4901a5de755942db99fe6fcbf8aff53a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc\"></div>\n",
+       "<div id=\"altair-viz-4901a5de755942db99fe6fcbf8aff53a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d0cacf806a7044ad90e1cfdf9d15dcbc\");\n",
+       "    if (outputDiv.id !== \"altair-viz-4901a5de755942db99fe6fcbf8aff53a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-4901a5de755942db99fe6fcbf8aff53a\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -133,7 +143,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "550397cf-ee9b-46e6-85b1-1e87ca231dac",
    "metadata": {},
    "outputs": [
@@ -169,23 +179,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-17eccc2a23174ca6b3943d1583dda9d7.vega-embed {\n",
+       "  #altair-viz-2a024140beb640fcbc20eed0650051cc.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-17eccc2a23174ca6b3943d1583dda9d7.vega-embed details,\n",
-       "  #altair-viz-17eccc2a23174ca6b3943d1583dda9d7.vega-embed details summary {\n",
+       "  #altair-viz-2a024140beb640fcbc20eed0650051cc.vega-embed details,\n",
+       "  #altair-viz-2a024140beb640fcbc20eed0650051cc.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-17eccc2a23174ca6b3943d1583dda9d7\"></div>\n",
+       "<div id=\"altair-viz-2a024140beb640fcbc20eed0650051cc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-17eccc2a23174ca6b3943d1583dda9d7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-17eccc2a23174ca6b3943d1583dda9d7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2a024140beb640fcbc20eed0650051cc\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2a024140beb640fcbc20eed0650051cc\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -238,7 +248,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "a5d5f177-4e41-4312-a74b-326b0bb2da5b",
    "metadata": {},
    "outputs": [
@@ -429,7 +439,7 @@
        "4                 1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "0d9960f6-215d-4636-9d96-8a6c28b31655",
    "metadata": {},
    "outputs": [
@@ -484,7 +494,7 @@
        "{'kneighborsregressor__n_neighbors': 28}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "440354c6-735f-4b85-b5da-5b0c9657c40f",
    "metadata": {},
    "outputs": [
@@ -568,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "79cdc47c-0752-49fc-ad5b-fd8107626a13",
    "metadata": {},
    "outputs": [
@@ -577,23 +587,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51.vega-embed {\n",
+       "  #altair-viz-87deb85a610b453498b406dcebf67984.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51.vega-embed details,\n",
-       "  #altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51.vega-embed details summary {\n",
+       "  #altair-viz-87deb85a610b453498b406dcebf67984.vega-embed details,\n",
+       "  #altair-viz-87deb85a610b453498b406dcebf67984.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51\"></div>\n",
+       "<div id=\"altair-viz-87deb85a610b453498b406dcebf67984\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-1b8b5d8648a0481cbf038ccb20ca7b51\");\n",
+       "    if (outputDiv.id !== \"altair-viz-87deb85a610b453498b406dcebf67984\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-87deb85a610b453498b406dcebf67984\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -696,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "id": "f961cab9-4145-42bb-9139-6b163afe55cd",
    "metadata": {},
    "outputs": [
@@ -748,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "04c604ae-a8cc-4857-b233-aeb293ec445f",
    "metadata": {},
    "outputs": [
@@ -757,23 +767,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3c75b832f2814f979ee54184747d7d33.vega-embed {\n",
+       "  #altair-viz-162538ef8976427690f6a6db2244941d.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3c75b832f2814f979ee54184747d7d33.vega-embed details,\n",
-       "  #altair-viz-3c75b832f2814f979ee54184747d7d33.vega-embed details summary {\n",
+       "  #altair-viz-162538ef8976427690f6a6db2244941d.vega-embed details,\n",
+       "  #altair-viz-162538ef8976427690f6a6db2244941d.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3c75b832f2814f979ee54184747d7d33\"></div>\n",
+       "<div id=\"altair-viz-162538ef8976427690f6a6db2244941d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3c75b832f2814f979ee54184747d7d33\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3c75b832f2814f979ee54184747d7d33\");\n",
+       "    if (outputDiv.id !== \"altair-viz-162538ef8976427690f6a6db2244941d\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-162538ef8976427690f6a6db2244941d\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -857,30 +867,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "8524a65c-955a-43b5-8c74-20b679e7722c",
+   "cell_type": "markdown",
+   "id": "768bc2df-4b6e-497b-851f-4e279a16816a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (388326943.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[42], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    The plot above shows a decreasing trend from the prediction made by our model. This makes sense\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "The plot above shows a decreasing trend from the prediction made by our model. This makes sense "
+    "The plot above shows a decreasing trend from the prediction made by our model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "0ff9e220-1870-4531-b01d-05dae428e6e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 43.453683282655774\n",
+      "Root Mean Squared Error (RMSE): 6.591940782702449\n",
+      "R-squared: 0.5304112973175941\n",
+      "Adjusted R-squared: 0.4734914545682115\n",
+      "Intercept: -5.2211748359803565\n",
+      "Coefficients: [ 4.03748816  2.17606734 -0.10342626  0.64320256]\n",
+      "            Feature  Coefficient\n",
+      "0  subscribe_binary     4.037488\n",
+      "1    experience_val     2.176067\n",
+      "2               age    -0.103426\n",
+      "3   number_sessions     0.643203\n"
+     ]
+    }
+   ],
    "source": [
     "X = players_combined[['subscribe_binary', 'experience_val', 'age', 'number_sessions']]\n",
     "y = players_combined['played_hours']\n",
@@ -920,6 +937,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "19166e68-aac4-4469-8032-f99c5f71f33d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9cd3971-8059-488f-94fd-02c39e9e1f8f",
    "metadata": {},
    "outputs": [],
    "source": []
