--- a/Compile_trial_sanchia.ipynb
+++ b/Compile_trial_sanchia.ipynb
@@ -1140,7 +1140,9 @@
    "id": "19166e68-aac4-4469-8032-f99c5f71f33d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "okay trying something because something seems sus "
+   ]
   },
   {
    "cell_type": "code",
