--- a/Plaicraft Group Project.ipynb
+++ b/Plaicraft Group Project.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e4af63ce-f42b-4785-861a-c4a6b9f9513a",
+   "cell_type": "markdown",
+   "id": "bd61d934-621c-4081-8551-ab5b4281d037",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Predicting time of play based on plaicraft players' age: a DSCI 100 project "
+    "## Plaicraft: Predicting Played Hours from Player Type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d4a8620-36f6-4e4f-954b-befe0d19b76b",
    "metadata": {},
    "outputs": [
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3398edc8-9bb8-47fd-adb1-ff38e9b09f51",
    "metadata": {},
    "outputs": [],
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "45c2412a-6c85-4d6e-a095-f9ccd2544201",
    "metadata": {},
    "outputs": [
@@ -74,23 +72,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-5600d4da5e9341e39def37744813fa7f.vega-embed {\n",
+       "  #altair-viz-b561e7eedfb948d588e177d2581f20e7.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-5600d4da5e9341e39def37744813fa7f.vega-embed details,\n",
-       "  #altair-viz-5600d4da5e9341e39def37744813fa7f.vega-embed details summary {\n",
+       "  #altair-viz-b561e7eedfb948d588e177d2581f20e7.vega-embed details,\n",
+       "  #altair-viz-b561e7eedfb948d588e177d2581f20e7.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-5600d4da5e9341e39def37744813fa7f\"></div>\n",
+       "<div id=\"altair-viz-b561e7eedfb948d588e177d2581f20e7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-5600d4da5e9341e39def37744813fa7f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-5600d4da5e9341e39def37744813fa7f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b561e7eedfb948d588e177d2581f20e7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b561e7eedfb948d588e177d2581f20e7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -143,7 +141,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "550397cf-ee9b-46e6-85b1-1e87ca231dac",
    "metadata": {},
    "outputs": [
@@ -180,23 +178,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-12025c93f4674b8cb0559f37a26bad9f.vega-embed {\n",
+       "  #altair-viz-93b8487ace7d4ed6b71da867fbae6501.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-12025c93f4674b8cb0559f37a26bad9f.vega-embed details,\n",
-       "  #altair-viz-12025c93f4674b8cb0559f37a26bad9f.vega-embed details summary {\n",
+       "  #altair-viz-93b8487ace7d4ed6b71da867fbae6501.vega-embed details,\n",
+       "  #altair-viz-93b8487ace7d4ed6b71da867fbae6501.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-12025c93f4674b8cb0559f37a26bad9f\"></div>\n",
+       "<div id=\"altair-viz-93b8487ace7d4ed6b71da867fbae6501\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-12025c93f4674b8cb0559f37a26bad9f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-12025c93f4674b8cb0559f37a26bad9f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-93b8487ace7d4ed6b71da867fbae6501\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-93b8487ace7d4ed6b71da867fbae6501\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -249,7 +247,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a5d5f177-4e41-4312-a74b-326b0bb2da5b",
    "metadata": {
     "scrolled": true
@@ -442,7 +440,7 @@
        "4                 1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e554a6e3-53f0-408f-9202-3c95d79cc77c",
    "metadata": {},
    "outputs": [
@@ -495,23 +493,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-32deca79c0cd4c698e89d9cf44c62097.vega-embed {\n",
+       "  #altair-viz-2fae483c33c04364b67585498c187d97.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-32deca79c0cd4c698e89d9cf44c62097.vega-embed details,\n",
-       "  #altair-viz-32deca79c0cd4c698e89d9cf44c62097.vega-embed details summary {\n",
+       "  #altair-viz-2fae483c33c04364b67585498c187d97.vega-embed details,\n",
+       "  #altair-viz-2fae483c33c04364b67585498c187d97.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-32deca79c0cd4c698e89d9cf44c62097\"></div>\n",
+       "<div id=\"altair-viz-2fae483c33c04364b67585498c187d97\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-32deca79c0cd4c698e89d9cf44c62097\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-32deca79c0cd4c698e89d9cf44c62097\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2fae483c33c04364b67585498c187d97\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2fae483c33c04364b67585498c187d97\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -564,7 +562,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ee9e5b62-2127-4993-9d32-e02b58b71279",
    "metadata": {},
    "outputs": [
@@ -594,23 +592,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f8e9bbda75b645759e12a8905906876e.vega-embed {\n",
+       "  #altair-viz-a9ccb894e068437aa77b03b3aa98a17d.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f8e9bbda75b645759e12a8905906876e.vega-embed details,\n",
-       "  #altair-viz-f8e9bbda75b645759e12a8905906876e.vega-embed details summary {\n",
+       "  #altair-viz-a9ccb894e068437aa77b03b3aa98a17d.vega-embed details,\n",
+       "  #altair-viz-a9ccb894e068437aa77b03b3aa98a17d.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f8e9bbda75b645759e12a8905906876e\"></div>\n",
+       "<div id=\"altair-viz-a9ccb894e068437aa77b03b3aa98a17d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f8e9bbda75b645759e12a8905906876e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f8e9bbda75b645759e12a8905906876e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a9ccb894e068437aa77b03b3aa98a17d\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a9ccb894e068437aa77b03b3aa98a17d\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -663,7 +661,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0d9960f6-215d-4636-9d96-8a6c28b31655",
    "metadata": {},
    "outputs": [
@@ -695,7 +693,7 @@
        "{'kneighborsregressor__n_neighbors': 28}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "440354c6-735f-4b85-b5da-5b0c9657c40f",
    "metadata": {},
    "outputs": [
@@ -779,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "79cdc47c-0752-49fc-ad5b-fd8107626a13",
    "metadata": {},
    "outputs": [
@@ -788,23 +786,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-7178a1248352488f83de5b7aa691180d.vega-embed {\n",
+       "  #altair-viz-9cf3d077de88401c9be56f0e3893713f.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-7178a1248352488f83de5b7aa691180d.vega-embed details,\n",
-       "  #altair-viz-7178a1248352488f83de5b7aa691180d.vega-embed details summary {\n",
+       "  #altair-viz-9cf3d077de88401c9be56f0e3893713f.vega-embed details,\n",
+       "  #altair-viz-9cf3d077de88401c9be56f0e3893713f.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-7178a1248352488f83de5b7aa691180d\"></div>\n",
+       "<div id=\"altair-viz-9cf3d077de88401c9be56f0e3893713f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-7178a1248352488f83de5b7aa691180d\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-7178a1248352488f83de5b7aa691180d\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9cf3d077de88401c9be56f0e3893713f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9cf3d077de88401c9be56f0e3893713f\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -907,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f961cab9-4145-42bb-9139-6b163afe55cd",
    "metadata": {},
    "outputs": [
@@ -959,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "04c604ae-a8cc-4857-b233-aeb293ec445f",
    "metadata": {},
    "outputs": [
@@ -968,23 +966,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-0440cc60480c43cd9c066585975105a4.vega-embed {\n",
+       "  #altair-viz-e143dc17063f4a0cbe861d9838a9a443.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-0440cc60480c43cd9c066585975105a4.vega-embed details,\n",
-       "  #altair-viz-0440cc60480c43cd9c066585975105a4.vega-embed details summary {\n",
+       "  #altair-viz-e143dc17063f4a0cbe861d9838a9a443.vega-embed details,\n",
+       "  #altair-viz-e143dc17063f4a0cbe861d9838a9a443.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-0440cc60480c43cd9c066585975105a4\"></div>\n",
+       "<div id=\"altair-viz-e143dc17063f4a0cbe861d9838a9a443\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0440cc60480c43cd9c066585975105a4\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0440cc60480c43cd9c066585975105a4\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e143dc17063f4a0cbe861d9838a9a443\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e143dc17063f4a0cbe861d9838a9a443\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1077,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0ff9e220-1870-4531-b01d-05dae428e6e8",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "19166e68-aac4-4469-8032-f99c5f71f33d",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1143,7 @@
      "evalue": "invalid syntax (1097798074.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[15], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    okay trying something because something seems sus\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    okay trying something because something seems sus\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
