--- a/Plaicraft Group Project.ipynb
+++ b/Plaicraft Group Project.ipynb
@@ -377,12 +377,19 @@
    "id": "03611c72-f435-4df5-997d-258b2584d0cb",
    "metadata": {},
    "source": [
-    "First, `experience` was converted from qualitative to quantitative `experience_val` by assigning the experience level from 1 (least experienced) to 5 (most experienced). This makes the assumption that there are equal changes in experience level between each value, which is not true."
+    "From `players.csv`\n",
+    "- `age` is already present, so no additional wrangling is required.\n",
+    "- `experience` was converted from qualitative to quantitative `experience_val` by assigning the experience level from 1 (least experienced) to 5 (most experienced). This makes the assumption that there are equal changes in experience level between each value, which is not true.\n",
+    "\n",
+    "From `sessions.csv`, `hashedEmail` was used as an identifier to link session data to each player.\n",
+    "\n",
+    "- `start_time` and `end_time` were subtracted to calculate `session_length`\n",
+    "- `subscribe` was assigned a number where True = 1 and False = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "cdad0212-da8f-43b0-a6bf-d628c92575f5",
    "metadata": {},
    "outputs": [
@@ -418,7 +425,7 @@
        "      <th>organizationName</th>\n",
        "      <th>number_sessions</th>\n",
        "      <th>mean_session_length</th>\n",
-       "      <th>sd_session_length</th>\n",
+       "      <th>std_session_length</th>\n",
        "      <th>experience_val</th>\n",
        "      <th>subscribe_binary</th>\n",
        "    </tr>\n",
@@ -528,12 +535,12 @@
        "3           0.7      Flora  Female   21           NaN               NaN   \n",
        "4           0.1      Kylie    Male   21           NaN               NaN   \n",
        "\n",
-       "   number_sessions  mean_session_length  sd_session_length  experience_val  \\\n",
-       "0             27.0             1.246296           0.902162               5   \n",
-       "1              3.0             1.416667           1.233671               4   \n",
-       "2              1.0             0.083333                NaN               4   \n",
-       "3              1.0             0.833333                NaN               2   \n",
-       "4              1.0             0.150000                NaN               3   \n",
+       "   number_sessions  mean_session_length  std_session_length  experience_val  \\\n",
+       "0             27.0             1.246296            0.902162               5   \n",
+       "1              3.0             1.416667            1.233671               4   \n",
+       "2              1.0             0.083333                 NaN               4   \n",
+       "3              1.0             0.833333                 NaN               2   \n",
+       "4              1.0             0.150000                 NaN               3   \n",
        "\n",
        "   subscribe_binary  \n",
        "0                 1  \n",
@@ -543,13 +550,13 @@
        "4                 1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#mapping experiences\n",
+    "#define experience level as numbers 1 to 5\n",
     "experience_mapping = {\n",
     "    'Beginner': 1,\n",
     "    'Amateur': 2,\n",
@@ -558,24 +565,32 @@
     "    'Pro': 5\n",
     "}\n",
     "\n",
-    "#converting dates to datetime object\n",
+    "#convert dates to datetime object\n",
     "sessions['start_time'] = pd.to_datetime(sessions['start_time'], format=\"%d/%m/%Y %H:%M\")\n",
     "sessions['end_time'] = pd.to_datetime(sessions['end_time'], format=\"%d/%m/%Y %H:%M\")\n",
     "\n",
+    "#calculate session length\n",
     "sessions['session_length'] = (sessions['end_time'] - sessions['start_time']).dt.total_seconds() / 3600\n",
-    "sessions['original_session_length'] = (sessions['original_end_time'] - sessions['original_start_time'])\n",
     "\n",
-    "#grouping datas in sessions dataframe based onemail and finding summaries\n",
+    "#group data in sessions dataframe based on player email\n",
     "player_sessions = sessions.groupby('hashedEmail').agg(\n",
-    "    number_sessions=('session_length', 'size'), \n",
-    "    mean_session_length=('session_length', 'mean'), \n",
-    "    sd_session_length=('session_length', 'std') \n",
+    "    number_sessions=('session_length', 'size'), #calculate total number of sessions per player\n",
+    "    mean_session_length=('session_length', 'mean'), #calculate average session length per player\n",
+    "    std_session_length=('session_length', 'std') #calculate standard deviation (std) of session length per player\n",
+    "    #note: session length (mean and std) were unused in our analysis\n",
+    "    #      but it could be useful for the client to answer other questions\n",
     ").reset_index()\n",
     "\n",
-    "#merging the datas we need and tidying them\n",
+    "#combine player and session data using email\n",
     "players_combined = pd.merge(players, player_sessions, on='hashedEmail', how='left')\n",
+    "\n",
+    "#convert experience into numbers 1 to 5\n",
     "players_combined['experience_val'] = players_combined['experience'].map(experience_mapping)\n",
+    "\n",
+    "#convert subscribe into binary\n",
     "players_combined['subscribe_binary'] = players_combined['subscribe'].astype(int)\n",
+    "\n",
+    "#drop data missing for variables of interest - assume it is missing at random\n",
     "players_combined = players_combined.dropna(subset=['subscribe_binary', 'experience_val', 'age', 'number_sessions', 'played_hours'])\n",
     "players_combined.head(5)"
    ]
