multivariate blank formula

--- a/Plaicraft Group Project.ipynb
+++ b/Plaicraft Group Project.ipynb
@@ -1724,14 +1724,20 @@
    "id": "a96e2386-c466-4786-be80-525fc5d15c6b",
    "metadata": {},
    "source": [
-    "*Figure 6: Simple Linear Regression to predict Total Time Played (hours) based on Player Age (years)*\n",
+    "Multivariate linear regression suggests the following relationship:\n",
     "\n",
-    "Simple linear regression suggests that there is a negative relationship: as `age` increases, `played_hours` decreases.\n",
+    "$ Played\\: hours = !!!intercept!!! + 000 * subscription\\: status + 000 * experience\\: level + 000 * age + 000 * number\\: of\\: sessions $\n",
     "\n",
-    "$ Played\\: hours = 16.44 - 0.319 * age $\n",
-    "\n",
-    "At the minimum age (7 years), the predicted played hours would be 14.2 hours."
+    "There is a positive/negative relationship between ...."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "181fd5af-9565-4d35-8248-f08b11b2d98b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
