--- a/Plaicraft Group Project.ipynb
+++ b/Plaicraft Group Project.ipynb
@@ -60,9 +60,17 @@
     "\n",
     "The Pacific Laboratory for Artificial Intelligence (PLAI) at UBC is working on a project to study human behavior in video game environments using generative AI and machine learning. A key component of this research involves Plaicraft.ai, which is a public platform that allows players to engage with Minecraft in a cloud environment so that they can collect valuable gameplay data. They aim to collect over 10,000 hours of gameplay to advance artificial general intelligence (AGI) research. They need our help to understand ***which \"kinds\" of players are most likely to contribute a large amount of data, and how can this knowledge improve recruitment efforts*** answering this question will enable PLAI to target specific player profiles for recruitment and ensure they have efficient resource allocation for software.\n",
     "\n",
-    "### 2. Exploring Datasets\n",
+    "### 3. Our Questions\n",
     "\n",
-    "Our report addresses this question by analyzing two datasets: one about the individual player information (players.csv) and another detailing gameplay sessions (session.csv). Through data wrangling, visualization, and predictive modeling, the report aims to identify characteristics of high-contributing players and provide actionable insights for PLAI’s recruitment strategies. This analysis is not only significant for optimizing the current project but also sets a precedent for future data-driven research in gaming and AI.\n",
+    "To explore how player type predicts `played_hours`, 3 models will be created using the following predictors:\n",
+    "1) K-NN Regression - using `age`\n",
+    "2) Simple Linear Regression - `age`\n",
+    "3) Multivariate Linear Regression - `subscription status`, `experience level`, `age`, and `number of sessions`\n",
+    "\n",
+    "\n",
+    "### 3. Exploring Datasets\n",
+    "\n",
+    "Our report answers this question by analyzing two datasets: one about the individual player information (players.csv) and another detailing gameplay sessions (session.csv). Through data wrangling, visualization, and predictive modeling, the report aims to identify characteristics of high-contributing players and provide actionable insights for PLAI’s recruitment strategies. This analysis is not only significant for optimizing the current project but also sets a precedent for future data-driven research in gaming and AI.\n",
     "\n",
     "\n",
     "#### <u>Players.csv</u>:\n",
@@ -70,7 +78,7 @@
     "- Total Observations (Rows): 196\n",
     "- Total Variables (Columns): 9\n",
     "\n",
-    "Dataset includes includes the following columns:\n",
+    "##### Dataset includes includes the following columns:\n",
     "\n",
     "| Column Name        | Data Type    | Description|\n",
     "---------------------|--------------|-------------|\n",
@@ -84,26 +92,6 @@
     "| `individualId`     | String       | Additional unique identifier for each player      \n",
     "| `organizationName` | String       | Name of the organization the player is associated with.    \n",
     "\n",
-    "##### Potential Issues:\n",
-    "\n",
-    "| Column Name        | Potential Issues                             |\n",
-    "|---------------------|----------------------------------------------|\n",
-    "| `experience`       | Could be difficult to directly code with this as we would somehow have to represent that Beginner < Amateur < Pro < Veteran |\n",
-    "| `subscribe`        | Not any apparent issues        |\n",
-    "| `hashedEmail`      | Irrelevant for all types of data analysis and should be excluded. |\n",
-    "| `played_hours`     | Potential outliers can effect the model (eg. 218 hours for one player) |\n",
-    "| `name`             | Not relevant for data analysis        |\n",
-    "| `gender`           | Will have to think about how to handling cases of \"Prefer not to Say\"  |\n",
-    "| `age`              | Some unrealistic values (e.g. 91).    |\n",
-    "| `individualId`     | All values are NaaN so should be excluded        |\n",
-    "| `organizationName` | All values are NaaN so should be excluded       |\n",
-    "\n",
-    "\n",
-    "Lastly it is important to note that there are potential issues with the way the data was collected:\n",
-    "\n",
-    "1. Dataset only includes players who chose to participate or were actively recruited by the research team so it might not represent the entire player population accurately.\n",
-    "   \n",
-    "2. Some variables like played_hours are likely tracked automatically by the server, which does not account for players who leave their accounts logged in without active play.\n",
     "\n",
     "#### <u>Sessions.csv:</u>:\n",
     "\n",
@@ -121,24 +109,15 @@
     "| `original_end_time`    | Float        | Timestamp representation of the `end_time` column.          |\n",
     "\n",
     "\n",
-    "##### Potential Issues:\n",
+    "#### Potential Issues:\n",
     "\n",
-    "| Column Name           | Potential Issues                                                                                   |\n",
-    "|------------------------|----------------------------------------------------------------------------------------------------|\n",
-    "| `hashedEmail`          | Not directly useful for analysis; serves only as a unique identifier.                             |\n",
-    "| `start_time`           | May need to convert to a proper datetime format for analysis.                                     |\n",
-    "| `end_time`             | Missing values in some rows; handling these gaps will be necessary.                                  |\n",
-    "| `original_start_time`  | Redundant as it duplicates information from `start_time`.                                          |\n",
-    "| `original_end_time`    | Redundant as it duplicates information from `end_time`.          |\n",
+    "Lastly it is important to note any potential issues with the way the data was collected that might affect our questions:\n",
     "\n",
-    "#### Observations and Insights:\n",
-    "1. Both `original_start_time` and `original_end_time` columns are timestamps, but they provide the same information as `start_time` and `end_time` we only need one for the analysis\n",
-    "   \n",
-    "2. Some missing `end_time` that will need to be properly handled.\n",
+    "1. Some variables like played_hours are likely tracked automatically by the server, which does not account for players who leave their accounts logged in without active play.\n",
     "\n",
-    "3. In order to calculate session duration we will need to convert `start_time` and `end_time`.\n",
+    "2. Experience, Gender, and Age are self-reported, so players can respond untruthfully.\n",
     "\n",
-    "4. Similar to the `players.csv` dataset, information may be biased as it includes only active players, which may not represent the broader population of potential players."
+    "3. Start and end time in UNIX time are similar even when the DD/MM/YY times are different. DD/MM/YY times can be used."
    ]
   },
   {
@@ -149,6 +128,8 @@
     "# (2) Methods & Results:\n",
     "\n",
     "> describe the methods you used to perform your analysis from beginning to end that narrates the analysis code.\n",
+    ">\n",
+    "3 types of regression models will be created to predict `played_hours` because it is a quantitative variable.\n",
     "\n",
     "K-NN Regression is one way to predict using `age` because `played_hours` is a quantitative variable, not qualitative, and does not make assumptions about data linearity.\n",
     "\n",
@@ -159,25 +140,7 @@
     "* Predict with the testing data\n",
     "* Calculate the model's RMSPE\n",
     "* Conduct simple linear regression and multivariable linear regression to calculate RMSPE\n",
-    "* Comparing RMSPE of the 3 models: selecting the model with the lowest test dataset RMSPE\n",
-    "\n",
-    "DONE:\n",
-    "> loads data\n",
-    "> \n",
-    "> wrangles and cleans the data to the format necessary for the planned analysis\n",
-    ">\n",
-    "> creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis\n",
-    ">\n",
-    "> creates a visualization of the analysis\n",
-    "\n",
-    "TO-DO:\n",
-    "> performs a summary of the data set that is relevant for exploratory data analysis related to the planned analysis\n",
-    "\n",
-    "> performs the data analysis -- re-do multivariate linear regression\n",
-    "\n",
-    "> note: all figures should have a figure number and a legend\n",
-    ">\n",
-    "> Double check all visualization rules are met"
+    "* Comparing RMSPE of the 3 models: selecting the model with the lowest test dataset RMSPE"
    ]
   },
   {
